# spotify-clone

./: .dockerignore  .gitignore  CONTRIBUTING.md  ELASTICSEARCH.md  ELASTICSEARCH_SETUP_SUMMARY.md  ELASTICSEARCH_TROUBLESHOOTING.md  QUICK_START_ELASTICSEARCH.md  README.md  docker-compose.yml  entities.txt  package.json  pyproject.toml
assignments/1-app-mongodb/: README.md
assignments/1-mongodb-app/: README.md  entities.txt  main.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/1-mongodb-app/: ELASTICSEARCH_MIGRATION.md  cache_manager.py  change_logger.py  change_logs.py  config.py  dependencies.py  dependencies_cassandra.py  dependencies_elasticsearch.py  dependencies_neo4j.py  elasticsearch_sync.py  main.py  migrate.sh  migrate_to_elasticsearch.py
backend/1-mongodb-app/api/: config.py  playlists.py  users.py
backend/1-mongodb-app/routes/: albums.py  graph.py  playlists.py  search.py  songs.py  users.py
backend/app/: main.py
backend/app/core/: __init__.py  dependencies.py  dependencies_cassandra.py  dependencies_elasticsearch.py  dependencies_neo4j.py
backend/app/routes/: albums.py  graph.py  playlists.py  search.py  songs.py  users.py
backend/app/scripts/: __init__.py  migrate_to_elasticsearch.py
backend/app/services/: __init__.py  change_logger.py  change_logs.py  elasticsearch_sync.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css
schemes/: diagram-cassandra.txt  diagram-mongo.txt  diagram-neo4j.txt
schemes/elasticsearch/: albums.json  playlists.json  songs.json  (+1 more)
src/: App.jsx  index.css
(+13 files in other folders)
