[project]
name = "1-mongodb-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.2",
    "python-dotenv>=1.1.1",
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "cassandra-driver>=3.29.3",
    "neo4j>=5.26.0",
]
